# esp-picotts

./: CMakeLists.txt
examples/boot_greeting/: CMakeLists.txt
examples/boot_greeting/main/: CMakeLists.txt  boot_greeting.cc
